// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Highlight box Default renders correctly 1`] = `
<jest>
  <article
    aria-labelledby="highlight-box-title"
    class="ecl-highlight-box"
    id="highlight-box"
  >
    <header
      class="ecl-highlight-box__header"
    >
      <div
        class="ecl-highlight-box__icon-wrapper"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-highlight-box__icon ecl-icon-phosphor--arrow-right"
        />
      </div>
      <div
        class="ecl-highlight-box__title"
        id="highlight-box-title"
      >
        What are the next steps?
      </div>
    </header>
    <div
      class="ecl-highlight-box__body"
    >
      <div
        class="ecl-highlight-box__description"
      >
        Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
        <strong>
          Ut enim ad minim veniam
        </strong>
        , quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
      <a
        class="ecl-link ecl-link--secondary-neutral ecl-link--icon ecl-highlight-box__link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Read more
        </span>
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-phosphor--arrow-right"
        />
      </a>
    </div>
  </article>
</jest>
`;

exports[`Highlight box Default renders correctly with extra attributes 1`] = `
<jest>
  <article
    aria-labelledby="highlight-box-title"
    class="ecl-highlight-box"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="highlight-box"
  >
    <header
      class="ecl-highlight-box__header"
    >
      <div
        class="ecl-highlight-box__icon-wrapper"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-highlight-box__icon ecl-icon-phosphor--arrow-right"
        />
      </div>
      <div
        class="ecl-highlight-box__title"
        id="highlight-box-title"
      >
        What are the next steps?
      </div>
    </header>
    <div
      class="ecl-highlight-box__body"
    >
      <div
        class="ecl-highlight-box__description"
      >
        Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
        <strong>
          Ut enim ad minim veniam
        </strong>
        , quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
      <a
        class="ecl-link ecl-link--secondary-neutral ecl-link--icon ecl-highlight-box__link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Read more
        </span>
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-phosphor--arrow-right"
        />
      </a>
    </div>
  </article>
</jest>
`;

exports[`Highlight box Default renders correctly with extra class names 1`] = `
<jest>
  <article
    aria-labelledby="highlight-box-title"
    class="ecl-highlight-box custom-class custom-class--test"
    id="highlight-box"
  >
    <header
      class="ecl-highlight-box__header"
    >
      <div
        class="ecl-highlight-box__icon-wrapper"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-highlight-box__icon ecl-icon-phosphor--arrow-right"
        />
      </div>
      <div
        class="ecl-highlight-box__title"
        id="highlight-box-title"
      >
        What are the next steps?
      </div>
    </header>
    <div
      class="ecl-highlight-box__body"
    >
      <div
        class="ecl-highlight-box__description"
      >
        Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
        <strong>
          Ut enim ad minim veniam
        </strong>
        , quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
      <a
        class="ecl-link ecl-link--secondary-neutral ecl-link--icon ecl-highlight-box__link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Read more
        </span>
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-phosphor--arrow-right"
        />
      </a>
    </div>
  </article>
</jest>
`;
